--- a/www/style.css
+++ b/www/style.css
@@ -228,3 +228,17 @@ p {
 {
     margin-right:5px;
 }
+
+/* footer */
+.footer
+{
+    padding:50px 0;
+    background: #f7f7f7;
+    text-align: center;
+}
+
+
+
+
+
+
